--- a/index.html
+++ b/index.html
@@ -4,22 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css"
-      rel="stylesheet"
-      type="text/css"
-    />
+    <title>Simple Piano</title>
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.31.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body
-    style="
-      height: 100%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    "
-  >
+  <body style="height: 100%; display: flex; justify-content: center; align-items: center">
     <script>
       function bunyi1() {
         var bunyi1 = new Audio("./not/0.mp3");
@@ -217,109 +206,67 @@
     </script>
     <table style="display: flex; position: relative">
       <tr>
-        <button onclick="bunyi1();" class="btn h-64 mr-1 bg-accent-content">
-          1
-        </button>
+        <button onclick="bunyi1();" class="btn h-64 mr-1 bg-accent-content">1</button>
       </tr>
       <tr>
-        <button onclick="bunyi2();" class="btn h-64 mr-1 bg-accent-content">
-          2
-        </button>
+        <button onclick="bunyi2();" class="btn h-64 mr-1 bg-accent-content">2</button>
       </tr>
       <tr>
-        <button onclick="bunyi3();" class="btn h-64 mr-1 bg-accent-content">
-          3
-        </button>
+        <button onclick="bunyi3();" class="btn h-64 mr-1 bg-accent-content">3</button>
       </tr>
       <tr>
-        <button onclick="bunyi4()" class="btn h-64 mr-1 bg-accent-content">
-          4
-        </button>
+        <button onclick="bunyi4()" class="btn h-64 mr-1 bg-accent-content">4</button>
       </tr>
       <tr>
-        <button onclick="bunyi5()" class="btn h-64 mr-1 bg-accent-content">
-          5
-        </button>
+        <button onclick="bunyi5()" class="btn h-64 mr-1 bg-accent-content">5</button>
       </tr>
       <tr>
-        <button onclick="bunyi6()" class="btn h-64 mr-1 bg-accent-content">
-          6
-        </button>
+        <button onclick="bunyi6()" class="btn h-64 mr-1 bg-accent-content">6</button>
       </tr>
       <tr>
-        <button onclick="bunyi7()" class="btn h-64 mr-1 bg-accent-content">
-          7
-        </button>
+        <button onclick="bunyi7()" class="btn h-64 mr-1 bg-accent-content">7</button>
       </tr>
       <tr>
-        <button onclick="bunyi8()" class="btn h-64 mr-1 bg-accent-content">
-          8
-        </button>
+        <button onclick="bunyi8()" class="btn h-64 mr-1 bg-accent-content">8</button>
       </tr>
       <tr>
-        <button onclick="bunyi9()" class="btn h-64 mr-1 bg-accent-content">
-          9
-        </button>
+        <button onclick="bunyi9()" class="btn h-64 mr-1 bg-accent-content">9</button>
       </tr>
       <tr>
-        <button onclick="bunyi10()" class="btn h-64 mr-1 bg-accent-content">
-          10
-        </button>
+        <button onclick="bunyi10()" class="btn h-64 mr-1 bg-accent-content">10</button>
       </tr>
       <tr>
-        <button onclick="bunyi11()" class="btn h-64 mr-1 bg-accent-content">
-          11
-        </button>
+        <button onclick="bunyi11()" class="btn h-64 mr-1 bg-accent-content">11</button>
       </tr>
       <tr>
-        <button onclick="bunyi12()" class="btn h-64 mr-1 bg-accent-content">
-          12
-        </button>
+        <button onclick="bunyi12()" class="btn h-64 mr-1 bg-accent-content">12</button>
       </tr>
       <tr>
-        <button onclick="bunyi13()" class="btn h-64 mr-1 bg-accent-content">
-          13
-        </button>
+        <button onclick="bunyi13()" class="btn h-64 mr-1 bg-accent-content">13</button>
       </tr>
       <tr>
-        <button onclick="bunyi14()" class="btn h-64 mr-1 bg-accent-content">
-          14
-        </button>
+        <button onclick="bunyi14()" class="btn h-64 mr-1 bg-accent-content">14</button>
       </tr>
       <tr>
-        <button onclick="bunyi15()" class="btn h-64 mr-1 bg-accent-content">
-          15
-        </button>
+        <button onclick="bunyi15()" class="btn h-64 mr-1 bg-accent-content">15</button>
       </tr>
       <tr>
-        <button onclick="bunyi16()" class="btn h-64 mr-1 bg-accent-content">
-          16
-        </button>
+        <button onclick="bunyi16()" class="btn h-64 mr-1 bg-accent-content">16</button>
       </tr>
       <tr>
-        <button onclick="bunyi17()" class="btn h-64 mr-1 bg-accent-content">
-          17
-        </button>
+        <button onclick="bunyi17()" class="btn h-64 mr-1 bg-accent-content">17</button>
       </tr>
       <tr>
-        <button onclick="bunyi18()" class="btn h-64 mr-1 bg-accent-content">
-          18
-        </button>
+        <button onclick="bunyi18()" class="btn h-64 mr-1 bg-accent-content">18</button>
       </tr>
       <tr>
-        <button onclick="bunyi19()" class="btn h-64 mr-1 bg-accent-content">
-          19
-        </button>
+        <button onclick="bunyi19()" class="btn h-64 mr-1 bg-accent-content">19</button>
       </tr>
       <tr>
-        <button onclick="bunyi20()" class="btn h-64 mr-1 bg-accent-content">
-          20
-        </button>
+        <button onclick="bunyi20()" class="btn h-64 mr-1 bg-accent-content">20</button>
       </tr>
       <tr>
-        <button onclick="bunyi21()" class="btn h-64 mr-1 bg-accent-content">
-          21
-        </button>
+        <button onclick="bunyi21()" class="btn h-64 mr-1 bg-accent-content">21</button>
       </tr>
     </table>
   </body>
